sass/layouts/_venue.scss
.venue {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 280px;

    @include tablet {
        margin-top: 30px;
        height: 310px;
    }

    @include desktop {
        height: 430px;
    }

    &__photo {
        width: 100%;
        margin-right: auto;
        margin-left: auto;

        @include ultraHD {
            width: 2400px;
        }

        & img {
            display: inline-flex;
            width: 100%;
            height: 280px;
            object-fit: fill;
            overflow: hidden;

            @include tablet {
                height: 310px;
            }

            @include desktop {
                height: 410px;
                max-width: 2400px;
            }

             @include ultraHD {
                @include border-top-radius;
             }
        }
    }

    &__title {
        display: flex;
        flex-direction: row;
        height: 30%;
        @include center;
        padding-top: 20px;
        padding-bottom: 20px;
        margin-top: -70px;
        margin-left: 0;
        background-color: $lightgrey_color;
        border-top-right-radius: 40px;
        border-top-left-radius: 40px;

        &_name {
            margin: 0;
            @include typo-shrikhand;
            font-size: 1.7rem;
            font-weight: 400;
            margin-left: -10%;

            @include tablet {
                font-size: 2.5rem;
                margin-left: 0;
            }

            @include desktop {
                font-size: 3.1rem;
                margin-left: 0;
            }
        }

        &_button {
            display: inline-flex;
            position: relative;
            left: 7%;
            width: fit-content;
            background-color: $lightgrey_color;
            border: none;
            cursor: pointer;

            @include tablet {
                left: 60px;
            }

            @include desktop {
                left: 80px;
            }
        }

        &_heart {
            display: flex;
            fill: url(images/heart.svg#gradient_heart);
            fill-opacity: 0;
            stroke: $black_color;
            height: 24px;

            @include tablet {
                height: 32px;
            }

            @include desktop {
                height: 34px;
            }

            &:hover,
            &:active {
                animation: heart-filling both 1800ms;
                cursor: pointer;
            }
        }
    }
}

@keyframes heart-filling {
    0% {
        fill-opacity: 0;
        stroke-opacity: 1;
    }

    50% {
        stroke-opacity: 0;
    }

    100% {
        fill-opacity: 1;
        stroke-opacity: 0;
    }
}

